[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Asset/127/Player1.png" type="Texture" id=2]
[ext_resource path="res://Asset/music/JUMP.mp3" type="AudioStream" id=3]
[ext_resource path="res://Asset/music/WALK.mp3" type="AudioStream" id=4]
[ext_resource path="res://Box/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Box/Hurtbox.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 42, 67.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.5, 22.5 )

[sub_resource type="Animation" id=11]
resource_name = "Idle"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 1.1 ), Vector2( 1.1, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Jump"
length = 5.0
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Walk"
loop = true
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 40, 9 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 37, 64 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -0.5 )
shape = SubResource( 13 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.25, 0 )
texture = ExtResource( 2 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["player"]]
position = Vector2( -1.5, 45.5 )
shape = SubResource( 1 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 11 )
anims/Jump = SubResource( 9 )
anims/RESET = SubResource( 10 )
anims/Walk = SubResource( 8 )

[node name="JumpRequestTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
collision_mask = 17
attack_type = "tread"

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 1, 59 )
shape = SubResource( 12 )

[node name="Hurtbox" parent="." instance=ExtResource( 7 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[connection signal="timeout" from="CoyoteTimer" to="." method="request_jump"]
[connection signal="hit" from="Hitbox" to="." method="_on_Hitbox_hit"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_Hurtbox_hurt"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
